--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,17 @@
-version: '3'
+version: "3"
 services:
-
   front:
-    image: mortegro/nuxt-md-cards
-    ports:
-    - 1515:3000
+    image: "node:10"
     volumes:
-    - ./:/usr/src/app/
-    
+      - ./:/var/www/app
+    working_dir: "/var/www/app"
+    environment:
+      - NUXT_HOST=0.0.0.0
+      - NUXT_PORT=80
+    command: bash -c "npm install && npm run build && npm run production"
+    expose:
+    - "80"
+    environment:
+      VIRTUAL_HOST: nuxt-md-cards.ecsplico.de
+      LETSENCRYPT_HOST: nuxt-md-cards.ecsplico.de
+      LETSENCRYPT_EMAIL: matthias.bolz@gmail.com
