--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "memo-cards-md",
+  "name": "nuxt-embody",
   "version": "1.0.0",
-  "description": "Cards to remember",
+  "description": "Embody Experiment",
   "author": "Matthias Bolz",
   "private": true,
   "scripts": {
@@ -10,21 +10,23 @@
     "start": "nuxt start",
     "production": "HOST=0.0.0.0 PORT=80 nuxt start",
     "generate": "nuxt generate",
-    "build-container": "docker build -t mortegro/nuxt-md-cards . --force-rm"
+    "build-container": "docker build -t mortegro/nuxt-embody . --force-rm"
   },
   "dependencies": {
-    "@nuxtjs/pwa": "^3.0.0-beta.12",
-    "marked": "^0.6.1",
-    "nuxt": "^2.0.0",
-    "nuxt-pouch": "^0.1.0",
-    "vuetify": "^1.2.4"
+    "@nuxtjs/pwa": "^3.0.0-beta.20",
+    "marked": "^1.1.0",
+    "nuxt": "^2.12.2",
+    "pouchdb": "^7.2.1",
+    "pouchdb-authentication": "^1.1.3",
+    "pouchdb-find": "^7.2.1",
+    "pouchdb-live-find": "^0.4.0",
+    "pug": "^3.0.0",
+    "pug-plain-loader": "^1.0.0",
+    "stylus": "^0.54.7",
+    "stylus-loader": "^3.0.2",
+    "vue-pouch": "0.0.23"
   },
   "devDependencies": {
-    "cross-env": "^5.2.0",
-    "pug": "^2.0.3",
-    "pug-plain-loader": "^1.0.0",
-    "nodemon": "^1.11.0",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2"
+    "@nuxtjs/vuetify": "^1.11.2"
   }
 }
