--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@nuxtjs/pwa": "^3.0.0-beta.20",
+    "konva": "^6.0.0",
     "marked": "^1.1.0",
     "nuxt": "^2.12.2",
     "pouchdb": "^7.2.1",
@@ -24,6 +25,7 @@
     "pug-plain-loader": "^1.0.0",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
+    "vue-konva": "^2.1.3",
     "vue-pouch": "0.0.23"
   },
   "devDependencies": {
