--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "vue-konva": "^2.1.3",
-    "vue-pouch": "0.0.23"
+    "vue-pouch": "0.0.23",
+    "vuejs-logger": "^1.5.4"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.11.2"
