--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@nuxtjs/pwa": "^3.0.0-beta.20",
     "konva": "^6.0.0",
+    "markdown-it": "^11.0.0",
     "marked": "^1.1.0",
     "nuxt": "^2.12.2",
     "pouchdb": "^7.2.1",
