--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "stylus-loader": "^3.0.2",
     "vue-konva": "^2.1.3",
     "vue-pouch": "0.0.23",
-    "vuejs-logger": "^1.5.4"
+    "vuejs-logger": "^1.5.4",
+    "vuetify-form-base": "^0.1.21"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.11.2"
