--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,22 +1,25 @@
-version: '3'
+version: "2"
 services:
-
   front:
-    image: mortegro/nuxt-md-cards
-    expose:
-    - "80"
-    - "443"
+    image: "node:10"
     volumes:
-    - ./:/usr/src/app/
+      - ./:/var/www/app
+    working_dir: "/var/www/app"
     environment:
-      VIRTUAL_HOST: nuxt-md-cards.ecsplico.de
-      LETSENCRYPT_HOST: nuxt-md-cards.ecsplico.de
-      LETSENCRYPT_EMAIL: matthias.bolz@gmail.com
+      - NUXT_HOST=0.0.0.0
+      - NUXT_PORT=80
+      - BACKEND
+      - PUBKEY
+      # - VIRTUAL_HOST
+      # - LETSENCRYPT_HOST=${VIRTUAL_HOST}
+      # - LETSENCRYPT_EMAIL=matthias.bolz@gmail.com
+    command: bash -c "npm install && npm run build && npm run production"
+    ports:
+     - 8888:80
+    networks:
+      - nginxproxy_apps
+    restart: always
 
 networks:
-  default:
-    external:
-      name: nginx-proxy
-
-
-
+  nginxproxy_apps:
+    external: true
