--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,13 +8,14 @@ services:
     environment:
       - NUXT_HOST=0.0.0.0
       - NUXT_PORT=80
-    command: bash -c "npm install && npm run build && npm run production"
+      - BACKEND
+      - PUBKEY
+      # - VIRTUAL_HOST
+      # - LETSENCRYPT_HOST=${VIRTUAL_HOST}
+      # - LETSENCRYPT_EMAIL=matthias.bolz@gmail.com
+    command: bash -c "npm install && npm run dev"
     expose:
-    - "80"
-    environment:
-      VIRTUAL_HOST: nuxt-md-cards.ecsplico.de
-      LETSENCRYPT_HOST: nuxt-md-cards.ecsplico.de
-      LETSENCRYPT_EMAIL: matthias.bolz@gmail.com
+     - 80
     networks:
       - nginxproxy_apps
     restart: always
